--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,9 @@ services:
     environment:
       - APP_PORT=3000
       - DB_HOST=buey.thenexusbattlesii.online
-      - DB_PORT=3309
+      - DB_PORT=3307
       - DB_USER=root
       - DB_PASSWORD=my-password
-      - DB_DATABASE=PORTAL_PAGOS
+      - DB_DATABASE=MICROTECH
       - HOST=https://gateway.thenexusbattlesii.online
-      - PORT=5000
-      - PAYPAL_API_CLIENT=AbtsLQ_5xEn2YlnaoE9g5fVnHwvIDDKk0PZXKl2EMz70n5sNZ0mZUIhEKYYCB1QjpB6piC6EYkvsg7qm
-      - PAYPAL_API_SECRET=EJ9RQW8lAfWqL_oKWgmlnA_J77uFFcasnD4gVa6XlZqCUXTrBbXk1mkk5_Qh3HTiYVj_HMEobCy6zWt3
+      
